--- a/packages/legacy/app/ios/Podfile
+++ b/packages/legacy/app/ios/Podfile
@@ -1,7 +1,12 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '11.0'
+deployment_target = Gem::Version.new('12.4')
+platform :ios, deployment_target
+
+# ...
+
+install! 'cocoapods', :deterministic_uuids => false
 
 # This is used to allow the CI build to work. The pod(s) are
 # signed with the credentials / profile provided and xcodebuild
@@ -17,6 +22,22 @@ post_install do |installer|
   end
   react_native_post_install(installer)
   __apply_Xcode_12_5_M1_post_install_workaround(installer)
+  installer.pods_project.targets.each do |target|
+    case target.name
+    # Ignore RCT-Folly because it only works with 9.0 as a deployment target
+    when 'RCT-Folly'
+      next 
+    else
+      # Explicitly set pods deployment target for each build config to app deployment target
+      target.build_configurations.each do |config|
+        current_pod_target = config.build_settings['IPHONEOS_DEPLOYMENT_TARGET']
+        pod_ios_deployment_target = Gem::Version.new(current_pod_target)
+        if pod_ios_deployment_target <= deployment_target
+          config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+        end
+      end
+    end
+  end
 end
 
 target 'AriesBifold' do
@@ -26,10 +47,15 @@ target 'AriesBifold' do
 
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
 
+  flags = get_default_flags()
+
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => true
+    :hermes_enabled => flags[:hermes_enabled],
+    :fabric_enabled => flags[:fabric_enabled],
+    # An absolute path to your application root.
+    :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   target 'AriesBifoldTests' do
@@ -42,3 +68,5 @@ target 'AriesBifold' do
   #   __apply_Xcode_12_5_M1_post_install_workaround(installer)
   # end
 end
+
+
