--- a/packages/legacy/app/package.json
+++ b/packages/legacy/app/package.json
@@ -33,6 +33,7 @@
     "@react-navigation/stack": "6.0.11",
     "aries-bifold": "link:../core",
     "axios": "0.21.4",
+    "deprecated-react-native-prop-types": "^2.2.0",
     "i18next": "21.4.0",
     "indy-sdk-react-native": "^0.2.2",
     "lodash.flatten": "^4.4.0",
