--- a/packages/legacy/core/package.json
+++ b/packages/legacy/core/package.json
@@ -42,6 +42,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.21.0",
+    "deprecated-react-native-prop-types": "^2.2.0",
     "i18next": "^21.4.0",
     "indy-sdk-react-native": "^0.2.2",
     "lodash.flatten": "^4.4.0",
@@ -120,6 +121,7 @@
     "babel-jest": "^27.5.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "commitlint": "^11.0.0",
+    "deprecated-react-native-prop-types": "^2.2.0",
     "eslint": "^7.14.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
